--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "eslint-loader": "2.1.2"
   },
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^18.0.0",
+    "@ckeditor/ckeditor5-vue": "^1.0.1",
+    "axios": "^0.19.2",
     "firebase": "^7.14.1",
     "materialize-css": "^1.0.0-rc.2",
     "vue": "^2.5.2",
