--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@ckeditor/ckeditor5-build-classic": "^18.0.0",
     "@ckeditor/ckeditor5-vue": "^1.0.1",
     "axios": "^0.19.2",
+    "ckeditor4": "^4.14.0",
+    "ckeditor4-vue": "^0.2.0",
     "firebase": "^7.14.1",
     "materialize-css": "^1.0.0-rc.2",
     "vue": "^2.5.2",
