--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "firebase": "^7.14.1",
     "materialize-css": "^1.0.0-rc.2",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-social-sharing": "^2.4.7"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
