--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ckeditor4": "^4.14.0",
     "ckeditor4-vue": "^0.2.0",
     "dotenv": "^8.2.0",
+    "dotenv-webpack": "^1.7.0",
     "firebase": "^7.14.1",
     "materialize-css": "^1.0.0-rc.2",
     "vue": "^2.5.2",
